tests/baselines/reference/methodSignatureHandledDeclarationKindForSymbol.errors.txt
methodSignatureHandledDeclarationKindForSymbol.ts(6,5): error TS2717: Subsequent property declarations must have the same type.  Property 'bold' must be of type '() => string', but here has type 'string'.


==== methodSignatureHandledDeclarationKindForSymbol.ts (1 errors) ====
    interface Foo {
        bold(): string;
    }
    
    interface Foo {
        bold: string;
        ~~~~
!!! error TS2717: Subsequent property declarations must have the same type.  Property 'bold' must be of type '() => string', but here has type 'string'.
!!! related TS6203 methodSignatureHandledDeclarationKindForSymbol.ts:2:5: 'bold' was also declared here.
    }
    
    